# quantum-storage-system

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GITHUB_READY.txt  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  THIRD-PARTY-LICENSES.md  build.bat  demo.py
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  QuantumStorageSystem  cmake_install.cmake
config/: quantum_storage_config.json
docs/: API.md  ARCHITECTURE.md  INSTALLATION.md  README.md
src/: CMakeLists.txt  build.bat  build.sh  main.cpp  quantum_storage_system.cpp  quantum_storage_system.h
src/analytics/: storage_analytics_dashboard.cpp  storage_analytics_dashboard.h
src/cloud/: cloud_storage_integration.cpp  cloud_storage_integration.h
src/core/: advanced_compression_system.cpp  advanced_compression_system.h  batch_operation_manager.cpp  batch_operation_manager.h  encryption_manager.cpp  encryption_manager.h  health_monitor.cpp  health_monitor.h  ml_storage_optimizer.cpp  ml_storage_optimizer.h  performance_profiler.cpp  performance_profiler.h  usb_device_driver.cpp  usb_device_driver.h  virtual_storage_manager.cpp  virtual_storage_manager.h
src/gui/: api_gui.c  api_gui.h  gui_interface.cpp  gui_interface.h  imgui_gui.cpp  imgui_gui.h  independent_gui.cpp  independent_gui.h
